<resources>
    <string name="app_name">Cocktail</string>
    <string name="sample">Sample</string>
    <string name="cocktail_detail">Cocktail Detail</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="tag">Tag</string>
    <string name="cocktail_title">Cocktail Title</string>
    <string name="type">Type</string>
    <string name="instruction">Instruction</string>
    <string name="home">Home</string>
    <string name="favourite_drink">Favourite Drink</string>
    <string name="favourite_ingredient">Favourite Ingredient</string>
    <string name="about">About</string>
    <string name="dev_name">Developer Name :Kurio</string>
    <string name="dev_email">Email :kuriotetsuya123@gmail.com</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="non_alcoholic">NonAlcoholic</string>
    <string name="app_version">Version : %1$s (%2$s)</string>
    <string name="deleteAll">Delete All</string>
    <string name="do_you_want_to_delete_all_favourite_drink">Do you want to delete all favourite drinks?</string>
    <string name="do_you_want_to_delete_all_favourite_ingredient">Do you want to delete all favourite ingredients?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="drinkList">
        <item>Alcoholic</item>
        <item>Non Alcoholic</item>
    </string-array>

</resources>
