<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DrinkDetailActivity"
    tools:showIn="@layout/activity_drink_detail">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_alcoholic"
                android:layout_toEndOf="@+id/tv_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                tools:text="@string/sample"
                tools:textColor="@color/colorPrimary"
                tools:textSize="@dimen/textSizeLarge" />

            <TextView
                android:id="@+id/tv_tags"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                tools:text="@string/tag"
                tools:textSize="@dimen/textSizeLarge" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tags"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                tools:text="@string/category"
                tools:textSize="@dimen/textSizeLarge"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/tv_str_Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_category"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                tools:text="@string/category"
                tools:textSize="@dimen/textSizeLarge" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_str_Category"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/textSizeNormal"
                tools:text="@string/instruction"
                tools:textSize="@dimen/textSizeLarge"
                tools:textStyle="bold" />


            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                tools:text="@string/description"
                tools:textSize="@dimen/textSizeNormal" />


            <LinearLayout
                android:id="@+id/layout_details"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_instruction"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    tools:text="@string/ingredients"
                    tools:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_medium"
                    tools:listitem="@layout/drink_ingredient" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>